Fixed spacing

--- a/style.css
+++ b/style.css
@@ -36,17 +36,18 @@ div#header img#profile {
   margin-right: 20px;
 }
 
-div#header p {
+div#header p, div.post p.sans {
   font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-size: 14px;
   color: #555;
-  margin-bottom: 5px;
+  margin-bottom: 10px;
+  line-height: normal;
 }
 
 div.post {
   clear: both;
   width: 700px;
-  margin: 50px auto;
+  margin: 80px auto;
   font-family: georgia, serif;
   font-size: 20px;
 }
@@ -66,17 +67,15 @@ div.post p {
   line-height: 32px;
 }
 
-div.post p.sans {
-  font-size: 12px;
-  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+div.post p.preview {
+  margin-bottom: 5px;
 }
 
 div.post p.quote {
   margin: 30px 0 30px 20px;
-  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  font-size: 14px;
+  font-size: 16px;
   color: #555;
-  line-height: 20px;
+  line-height: 24px;
   border-left: 2px solid #2473F6;
   padding-left: 20px;
 }
